final final toucbhhhh

--- a/ogenix/files/footer.html
+++ b/ogenix/files/footer.html
@@ -9,7 +9,7 @@
                             <a href="index.html"><img src="assets/images/resources/footer-logo.png" alt="" width="200" height="200"></a>
                         </div>
                         <div class="footer-widget__about-text-box">
-                            <p class="footer-widget__about-text">We’re Providing Everyday Fresh <br> and Quality Products.</p>
+                            <p class="footer-widget__about-text">The Canvolution of<br>Plant-Based Sausages.</p>
                         </div>
                     </div>
                 </div>
@@ -22,12 +22,12 @@
                         <ul class="list-unstyled footer-widget__contact-list">
                             <li>
                                 <div class="text">
-                                    <p><a href="tel:928800688960">+92 (8800) 68 - 8960</a></p>
+                                    <p><a href="tel:928800688960">+62 8125 2657 775</a></p>
                                 </div>
                             </li>
                             <li>
                                 <div class="text">
-                                    <p><a href="mailto:charlene.cayliani@gmail.com">charlene.cayliani@gmail.com</a></p>
+                                    <p><a href="mailto:charlene.cayliani@gmail.com">desauge.id@gmail.com</a></p>
                                 </div>
                             </li>
                         </ul>
