--- a/ogenix/files/index.html
+++ b/ogenix/files/index.html
@@ -119,7 +119,7 @@
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="main-slider__content">
-                                        <h4 class="main-slider__sub-title">Select the health sausages</h4>
+                                        <h4 class="main-slider__sub-title">Choose the health sausages</h4>
                                         <h2 class="main-slider__title">The Canvolution of <br> Plant-Based Sausages.</h2>
                                         <div class="main-slider__btn-box">
                                             <a href="about.html" class="thm-btn main-slider__btn-one">Learn more</a>
@@ -159,7 +159,7 @@
                                     <span class="icon-free-delivery"></span>
                                 </div>
                                 <div class="feature-one__content">
-                                    <h3 class="feature-one__title">Orders over Rp 150.000,00</h3>
+                                    <h3 class="feature-one__title">Free Shipping Fee</h3>
                                     <p class="feature-one__subtitle">On all orders over Rp 150.000,00</p>
                                 </div>
                             </div>
@@ -198,7 +198,7 @@
                     <div class="col-xl-6">
                         <div class="about-one__left">
                             <div class="main-slider__img-ones">
-                                <img src="assets/images/mockups/3-tincan-mencong-removebg.png" alt="" class="img-bounce" width="762" height="600">
+                                <img src="assets/images/mockups/7sosismencong.png" alt="" class="img-bounce" width="762" height="1000">
                             </div>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>The natural products</p>
+                                        <p>100% made from plants</p>
                                     </div>
                                 </li>
                                 <li>
@@ -222,7 +222,7 @@
                                         <span class="fa fa-check"></span>
                                     </div>
                                     <div class="text">
-                                        <p>Everyday fresh sausages</p>
+                                        <p>Convenient and Versatile</p>
                                     </div>
                                 </li>
                             </ul>
@@ -233,8 +233,7 @@
                                     <img src="assets/images/icon/mushroomhome.png" alt="">
                                 </div>
                                 <div class="text">
-                                    <h3>Every day fresh and quality products <br> for
-                                        you deliver at doorstep</h3>
+                                    <h3>Flavor explosion in every bite. <br> You won't believe it's plant-based!</h3>
                                 </div>
                             </div>
                             <div class="about-one__btn-box">
@@ -325,7 +324,7 @@
                                 </div>
                                 <h3 class="categories-one__title"><a>Salsa Roja</a>
                                 </h3>
-                                <p class="categories-one__text">vibrant flavor with tangy freshness of tomatoes</p>
+                                <p class="categories-one__text">Vibrant flavor with tangy freshness of tomatoes</p>
                             </div>
                         </div>
                     </div>
@@ -371,7 +370,7 @@
                                             <span class="icon-organic-food"></span>
                                         </div>
                                         <h4 class="why-choose-one__title">Plant-based</h4>
-                                        <p class="why-choose-one__text">perfect for anyone looking for a eco-friendly option</p>
+                                        <p class="why-choose-one__text">perfect for anyone looking for meatless dishes</p>
                                     </div>
                                 </div>
                                 <div class="col-xl-6 col-lg-6 col-md-6">
@@ -380,7 +379,7 @@
                                             <span class="icon-apple"></span>
                                         </div>
                                         <h4 class="why-choose-one__title">Rich in Fiber</h4>
-                                        <p class="why-choose-one__text">nutritious alternative that supports digestive health.</p>
+                                        <p class="why-choose-one__text">nutritious alternative that supports digestive health</p>
                                     </div>
                                 </div>
                                 <div class="col-xl-6 col-lg-6 col-md-6">
@@ -475,7 +474,7 @@
                                                 <img src="assets/images/shapes/testimonial-one-shape-4.png" alt="">
                                             </div>
                                             <div class="testimonial-one__quote">
-                                                <span class="icon-quote"></span>
+                                               <img src="assets/images/logo/experience.jpg" alt=""/>
                                             </div>
                                             <p class="testimonial-one__text-2">We emphasize the deliciousness, health benefits, and versatility of the sausages. This positive word-of-mouth marketing can attract new customers and build brand loyalty.</p>
                                             <div class="testimonial-one__client-info">
@@ -492,7 +491,7 @@
                                                 <img src="assets/images/shapes/testimonial-one-shape-4.png" alt="">
                                             </div>
                                             <div class="testimonial-one__quote">
-                                                <span class="icon-quote"></span>
+                                                <img src="assets/images/logo/experience.jpg" alt=""/>
                                             </div>
                                             <p class="testimonial-one__text-2">De'Sauge sausages are not just for vegetarians. Their taste, texture, and variety appeal to a broader audience, including meat-eaters looking for healthier options for BBQs or everyday meals. This allows De'Sauge to capture a larger market share.</p>
                                             <div class="testimonial-one__client-info">
@@ -509,7 +508,7 @@
                                                 <img src="assets/images/shapes/testimonial-one-shape-4.png" alt="">
                                             </div>
                                             <div class="testimonial-one__quote">
-                                                <span class="icon-quote"></span>
+                                                <img src="assets/images/logo/experience.jpg" alt=""/>
                                             </div>
                                             <p class="testimonial-one__text-2">We offer a delicious and satisfying plant-based alternative to traditional sausages. This caters to the growing demand for healthy and sustainable food options.</p>
                                             <div class="testimonial-one__client-info">
