--- a/ogenix/files/team.html
+++ b/ogenix/files/team.html
@@ -123,13 +123,11 @@
                                     <p class="team-two__sub-title">CEO</p>
                                 </div>
                                 <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/lukekeviny?igsh=MW41dGJvdW1wYnl3OA=="><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--Team Two Single End-->
-                    <!--Team Two Single Start-->
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                         <div class="team-two__single">
                             <div class="team-two__img-box">
@@ -155,7 +153,7 @@
                                     <p class="team-two__sub-title">CFO</p>
                                 </div>
                                 <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/marvelljww/" ><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -187,7 +185,7 @@
                                     <p class="team-two__sub-title">COO</p>
                                 </div>
                                 <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/jessicameliap?igsh=MWE2a3JrY3p4YTVteg=="><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -219,13 +217,11 @@
                                     <p class="team-two__sub-title">Content Writer</p>
                                 </div>
                                 <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/charlenecayliani?igsh=ZGo4aTQ2MmU3YWJo" ><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <!--Team Two Single End-->
-                    <!--Team Two Single Start-->
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                         <div class="team-two__single">
                             <div class="team-two__img-box">
@@ -247,11 +243,11 @@
                                     <img src="assets/images/shapes/team-two-shape-3.png" alt="">
                                 </div>
                                 <div class="team-two__title-box">
-                                    <h3 class="team-two__title"><a href="team.html">Nathalie Jean</a></h3>
+                                    <h3 class="team-two__title"><a href="team.html">Jeanny Nathalie</a></h3>
                                     <p class="team-two__sub-title">Digital Marketing</p>
                                 </div>
                                 <div class="team-two__social-box">
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/nathalieejean?igsh=MXRwYTFzaG81MXZqZw="><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -262,7 +258,162 @@
             </div>
         </section>
 
-        <div class="section-title text-center">
+        <section class="testimonial-one mb-64">
+            <div class="testimonial-one__bg-img"
+                style="background-image: url(assets/images/backgrounds/testimonial-one__bg-img.jpg);"></div>
+            <div class="testimonial-one__bg-shape">
+                <img src="assets/images/shapes/testimonial-one-shape-3.png" alt="">
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-5">
+                        <div class="testimonial-one__left">
+                            <div class="section-title text-left">
+                                <span class="section-title__tagline">Portfolio</span>
+                                <h2 class="section-title__title">Our work experiences and organizations</h2>
+                            </div>
+                            <div class="icon">
+                                <img src="assets/images/logo/universitasciputra.jpg" alt=""  width="100" height="100" />
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="col-xl-8 col-lg-7">
+                        <div class="testimonial-one__right">
+                            <div class="testimonial-one__img-2">
+                                <img src="assets/images/mockups/ori-mencong-removebg.png" alt="" width="800" height="800">
+                            </div>
+                            <div class="testimonial-one__shape-1 float-bob-y">
+                                <img src="assets/images/shapes/testimonial-one-shape-1.png" alt="">
+                            </div>
+                            <div class="testimonial-one__shape-2 float-bob-x">
+                                <img src="assets/images/shapes/testimonial-one-shape-2.png" alt="">
+                            </div>
+                            <div class="testimonial-one__carousel owl-carousel owl-theme thm-owl__carousel"
+                                data-owl-options='{
+                                "loop": true,
+                                "autoplay": false,
+                                "margin": 30,
+                                "nav": true,
+                                "dots": false,
+                                "smartSpeed": 500,
+                                "autoplayTimeout": 10000,
+                                "navText": ["<span class=\"icon-up-arrow\"></span>","<span class=\"icon-down-arrow\"></span>"],
+                                "responsive": {
+                                    "0": {
+                                        "items": 1
+                                    },
+                                    "768": {
+                                        "items": 1
+                                    },
+                                    "992": {
+                                        "items": 1
+                                    },
+                                    "1200": {
+                                        "items": 1
+                                    }
+                                }
+                            }'>
+                                <div class="item">
+                                    <div class="testimonial-one__single">
+                                        <div class="testimonial-one__content-box">
+                                            <div class="testimonial-one__shape-4">
+                                                <img src="assets/images/shapes/testimonial-one-shape-4.png" alt="">
+                                            </div>
+                                            <div class="testimonial-one__quote">
+                                                <img src="assets/images/logo/experience.jpg" alt=""/>
+                                            </div>
+                                            <p class="testimonial-one__text-2">- Member Logistic of FIFO UC'23 <br>
+                                                - Food and Nutrition Department of Rektor Cup UC'23</p>
+                                            <div class="testimonial-one__client-info">
+                                                <h3 class="testimonial-one__client-name">Lucas Kevin </h3>
+                                                <p class="testimonial-one__client-subtitle"><span>.</span>CEO</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="testimonial-one__single">
+                                        <div class="testimonial-one__content-box">
+                                            <div class="testimonial-one__shape-4">
+                                                <img src="assets/images/shapes/testimonial-one-shape-4.png" alt="">
+                                            </div>
+                                            <div class="testimonial-one__quote">
+                                                <img src="assets/images/logo/experience.jpg" alt=""/>
+                                            </div>
+                                            <p class="testimonial-one__text-2">- President of Food and Technology Student Union  <br>
+                                                - Plan and Concept Department of O-Week UC'23 <br>
+                                                - Plan and Concept Department of O-Week UC'24</p>
+                                            <div class="testimonial-one__client-info">
+                                                <h3 class="testimonial-one__client-name">Marvel Wibawa</h3>
+                                                <p class="testimonial-one__client-subtitle"><span>.</span>CFO</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="testimonial-one__single">
+                                        <div class="testimonial-one__content-box">
+                                            <div class="testimonial-one__shape-4">
+                                                <img src="assets/images/shapes/testimonial-one-shape-4.png" alt="">
+                                            </div>
+                                            <div class="testimonial-one__quote">
+                                                <img src="assets/images/logo/experience.jpg" alt=""/>
+                                            </div>
+                                            <p class="testimonial-one__text-2">- Public Relation Coordinator of Food and Technology Student Student Union</p>
+                                            <div class="testimonial-one__client-info">
+                                                <h3 class="testimonial-one__client-name">Jessica Putri</h3>
+                                                <p class="testimonial-one__client-subtitle"><span>.</span>COO</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="testimonial-one__single">
+                                        <div class="testimonial-one__content-box">
+                                            <div class="testimonial-one__shape-4">
+                                                <img src="assets/images/shapes/testimonial-one-shape-4.png" alt="">
+                                            </div>
+                                            <div class="testimonial-one__quote">
+                                                <img src="assets/images/logo/experience.jpg" alt=""/>
+                                            </div>
+                                            <p class="testimonial-one__text-2">- Mentoring Department of O-Week UC'23  <br>
+                                                - Inventory Department of Leadership101 UC'23  <br>
+                                                - Co-Fascilitator of SLDR/C UC'24</p>
+                                            <div class="testimonial-one__client-info">
+                                                <h3 class="testimonial-one__client-name">Charlene Cayliani</h3>
+                                                <p class="testimonial-one__client-subtitle"><span>.</span>Content Writer</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="testimonial-one__single">
+                                        <div class="testimonial-one__content-box">
+                                            <div class="testimonial-one__shape-4">
+                                                <img src="assets/images/shapes/testimonial-one-shape-4.png" alt="">
+                                            </div>
+                                            <div class="testimonial-one__quote">
+                                                <img src="assets/images/logo/experience.jpg" alt=""/>
+                                            </div>
+                                            <p class="testimonial-one__text-2">- Member of Documentation and Publication of Leukotheam 4.0 <br>
+                                                - Publication and Documentation Department of Leadership102 UC'22 <br>
+                                                - Publication and Documentation Department of Start Up Games '22 <br></p>
+                                            <div class="testimonial-one__client-info">
+                                                <h3 class="testimonial-one__client-name">Jeanny Nathalie</h3>
+                                                <p class="testimonial-one__client-subtitle"><span>.</span>Digital Marketing</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="section-title text-center mt-48">
             <span class="section-title__tagline">Our Experts</span>
             <h2 class="section-title__title">Introduce our
                 <br>Experts</h2>
