--- a/ogenix/files/testimonials.html
+++ b/ogenix/files/testimonials.html
@@ -153,7 +153,7 @@
                             </div>
                             <div class=" testimonial-two__img-box">
                                 <div class=" testimonial-two__img">
-                                    <img class = "circular-frame" src="assets/images/people/clifftonwijaya.jpg" alt="">
+                                    <img class = "circular-frame" src="assets/images/people/clifftonwijaya.jpg" alt="" width="92" height="92">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
@@ -230,7 +230,7 @@
                             </div>
                             <div class="testimonial-two__img-box">
                                 <div class="testimonial-two__img">
-                                    <img src="assets/images/people/drstevennelson-copy.jpg" alt="">
+                                    <img src="assets/images/people/drstevennelson.jpg" alt=""  width="92" height="92">
                                 </div>
                             </div>
                             <div class="testimonial-two__quote">
